[gd_scene load_steps=8 format=3 uid="uid://ds8ja5st63qfc"]

[ext_resource type="Script" uid="uid://cu5u52htsk3a8" path="res://Scripts/menu.gd" id="1_1rerr"]
[ext_resource type="AudioStream" uid="uid://6yfyqqn3m0at" path="res://Assets/Sounds/menu.mp3" id="2_uk6bn"]
[ext_resource type="Texture2D" uid="uid://co1hmxjndkcxw" path="res://obraz_menu.png" id="2_wuk0b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t1b1y"]
texture = ExtResource("2_wuk0b")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjcm1"]
bg_color = Color(0.50357, 0.390414, 0.401546, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.443137, 0.235294, 0.160784, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugp1d"]
bg_color = Color(0.186708, 0.166799, 0.174799, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.443137, 0.235294, 0.160784, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_158mb"]
bg_color = Color(0.806592, 0.779621, 0.792067, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.256146, 0.124502, 0.0782168, 0.6)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1rerr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t1b1y")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -32.0
offset_right = 113.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="startGame" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_tjcm1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ugp1d")
theme_override_styles/normal = SubResource("StyleBoxFlat_158mb")
text = "Start Game"

[node name="options" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_tjcm1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ugp1d")
theme_override_styles/normal = SubResource("StyleBoxFlat_158mb")
text = "Options"

[node name="credits" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_tjcm1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ugp1d")
theme_override_styles/normal = SubResource("StyleBoxFlat_158mb")
text = "Credits"

[node name="exit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_tjcm1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ugp1d")
theme_override_styles/normal = SubResource("StyleBoxFlat_158mb")
text = "Exit"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_uk6bn")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 552.0
offset_bottom = 96.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_font_sizes/font_size = 66
text = "GODOT GAME"

[connection signal="pressed" from="Control/VBoxContainer/startGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/exit" to="." method="_on_exit_pressed"]
